Fix leaderboard issues + update styles for cards + ensure that nothing broken in other places as this component is used in many different places

--- a/src/app/shared/components/pulses/large-pulse/large-pulse.component.scss
+++ b/src/app/shared/components/pulses/large-pulse/large-pulse.component.scss
@@ -60,3 +60,14 @@
     justify-content: center;
     transform: rotate(180deg);
 }
+
+.card-body:empty,
+.card-footer:empty {
+    display: none;
+}
+
+.card-wrap:has(.card-icon:not(:empty)) {
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
